--- a/app/view/layout/layout.hbs
+++ b/app/view/layout/layout.hbs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" media="screen" href="/css/main.css">
     <link rel="shortcut icon" type="image/png" href="/images/favicon.png">
 </head>
-<body class="background">
+<body {{#if index}}class="background"{{/if}}>
 <section class="ui container" {{#if centered}}style="display: flex; justify-content: center; flex-direction: column; height: 60%;"{{/if}}>
     {{{content}}}
 </section>
