--- a/app/view/partials/usercard.hbs
+++ b/app/view/partials/usercard.hbs
@@ -10,8 +10,26 @@
     <div class="content">
         <span class="header">{{user.displayname}}</span>
         <div class="meta">
-            <span>@{{user.username}}</span><br />
-            <span class="date" title="{{user.joined}}">Member since {{formatRelative user.joined}}</span>
+            <div class="ui list">
+                <div class="item">
+                    <i class="at icon"></i>
+                    <div class="content">
+                        {{user.username}}
+                    </div>
+                </div>
+                <div class="item">
+                    <i class="calendar icon"></i>
+                    <div class="content" title="{{user.joined}}">
+                        Member since {{formatRelative user.joined}}
+                    </div>
+                </div>
+                <div class="item">
+                    <i class="mail icon"></i>
+                    <div class="content">
+                        {{user.email}}
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="description">
             {{user.description}}
