added global timeline

--- a/app/view/partials/menu.hbs
+++ b/app/view/partials/menu.hbs
@@ -1,6 +1,7 @@
 <nav class="ui bottom attached menu">
     <div class="left menu">
         <a class="header item" href="/">Tweetr</a>
+        <a class="item" href="/global">Global Timeline</a>
     </div>
 
     <div class="right menu">
