added title element where fitting

--- a/app/view/global.hbs
+++ b/app/view/global.hbs
@@ -3,6 +3,8 @@
 <section class="ui grid">
     <div class="ui sixteen wide column">
         <div class="ui segments">
+            {{> subtitle }}
+
             {{> tweets}}
         </div>
     </div>
