--- a/app/view/password.hbs
+++ b/app/view/password.hbs
@@ -4,16 +4,22 @@
         {{> usercard}}
     </div>
     <div class="ui twelve wide column">
-        <form method="post" class="ui form">
-            <div class="field">
-                <label>Password</label>
-                <input type="password" name="password" placeholder="Password" />
+        <div class="ui segments">
+            {{> subtitle icon='lock' subtitle='Passwort Change' }}
+
+            <div class="ui segment">
+                <form method="post" class="ui form">
+                    <div class="field">
+                        <label>Password</label>
+                        <input type="password" name="password" placeholder="Password" />
+                    </div>
+                    <div class="field">
+                        <label>Password (repeated)</label>
+                        <input type="password" name="passwordConfirm" placeholder="Password (repeated)" />
+                    </div>
+                    <input type="submit" value="Save Changes" class="ui primary button" />
+                </form>
             </div>
-            <div class="field">
-                <label>Password (repeated)</label>
-                <input type="password" name="passwordConfirm" placeholder="Password (repeated)" />
-            </div>
-            <input type="submit" value="Save Changes" class="ui primary button" />
-        </form>
+        </div>
     </div>
 </section>
