--- a/app/view/settings.hbs
+++ b/app/view/settings.hbs
@@ -14,9 +14,7 @@
     </div>
     <main class="ui twelve wide column">
         <div class="ui segments">
-            <div class="ui segment" style="display: inline-block">
-                <h2><i class="circular settings icon"></i> Settings</h2>
-            </div>
+            {{> subtitle icon='settings' subtitle='Settings' }}
             <div class="ui segment">
                 <form class="ui form" method="post" enctype="multipart/form-data">
                     <div class="ui field">
