--- a/app/view/user.hbs
+++ b/app/view/user.hbs
@@ -6,6 +6,7 @@
     </div>
     <div class="ui twelve wide column">
         <div class="ui segments">
+            {{> subtitle }}
             {{#if isHome}}
                 <article class="ui segment">
                     <form class="ui form" method="post">
